numbat/tests/snapshots/prelude_and_examples__name_resolution_error_snapshots@reserved_identifier_3.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/name_resolution_error/reserved_identifier_3.nbt
---
error: reserved identifier may not be used
  ┌─ <internal:3>:1:5
  │
1 │ let _ = 1
  │     ^ reserved identifier
